# cpp-training

./: .gitignore  README.md
opencv-01/: main.cpp  run.sh
opencv-02/: CMakeLists.txt  compile.sh  main.cpp
opencv-02/src/: imagePixels.cpp  imagePixels.h  main.cpp
opencv-gl-vscode/: CMakeLists.txt
opencv-gl-vscode/src/: main.cpp
probedivision/src/: findprime.cpp  findprime.h  main.cpp  probedivision.cpp  probedivision.h
the-cherno/headerfiles/src/: Log.cpp  Log.h  main.cpp
the-cherno/helloworld/: .gitignore
the-cherno/helloworld/src/: Main.cpp  Math.cpp  main.cpp  math.cpp  variables.cpp  variables.h
